Retirando dependencia do spring-boot para não empactor o jar com todas as dependências