@@ -33,6 +33,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.0.2.RELEASE</version>
 			<exclusions>
 				<!-- <exclusion> <groupId>javax.annotation</groupId> <artifactId>javax.annotation-api</artifactId> 
 					</exclusion> -->
@@ -45,6 +46,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-undertow</artifactId>
+			<version>2.0.2.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.jboss.spec.javax.annotation</groupId>
@@ -58,7 +60,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>5.0.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>5.0.6.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
+			<version>5.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<!-- https://jira.spring.io/browse/SPR-16776 -->
@@ -84,10 +97,6 @@
 						<version>3.7.0</version>
 						<configuration>
 							<release>${java.version}</release>
-							<compilerArgs>
-								<arg>--module-path</arg>
-								<arg>${project.build.directory}/../../message-broker/target/modules:${project.build.directory}/../../cont2/target/modules</arg>
-							</compilerArgs>
 						</configuration>
 						<dependencies>
 							<!-- JDK 10 fix -->
@@ -104,30 +113,6 @@
 						<configuration>
 							<outputDirectory>${project.build.directory}/modules</outputDirectory>
 						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>build-info</goal>
-								</goals>
-								<configuration>
-									<additionalProperties>
-										<encoding.source>${project.build.sourceEncoding}
-										</encoding.source>
-										<encoding.reporting>${project.reporting.outputEncoding}
-										</encoding.reporting>
-										<java.source>${java.version}</java.source>
-										<java.target>${java.version}</java.target>
-									</additionalProperties>
-								</configuration>
-							</execution>
-						</executions>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
