@@ -28,14 +28,17 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
+			<version>5.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+			<version>5.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
+			<version>5.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<!-- https://jira.spring.io/browse/SPR-16776 -->
@@ -61,17 +64,25 @@
 			</properties>
 			<build>
 				<plugins>
-					
+
+					<plugin>
+						<artifactId>maven-jar-plugin</artifactId>
+						<version>3.1.0</version>
+						<executions>
+							<execution>
+								<configuration>
+									<outputDirectory>${project.build.directory}/modules</outputDirectory>
+								</configuration>
+
+							</execution>
+						</executions>
+					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>3.7.0</version>
 						<configuration>
 							<release>${java.version}</release>
-							<compilerArgs>
-								<arg>--module-path</arg>
-								<arg>${project.build.directory}/../../message-broker/target/modules</arg>
-							</compilerArgs>
 						</configuration>
 						<dependencies>
 							<!-- JDK 10 fix -->
@@ -81,37 +92,6 @@
 								<version>6.1.1</version>
 							</dependency>
 						</dependencies>
-					</plugin>
-					<plugin>
-						<artifactId>maven-jar-plugin</artifactId>
-						<version>3.0.2</version>
-						<configuration>
-							<outputDirectory>${project.build.directory}/modules</outputDirectory>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>build-info</goal>
-								</goals>
-								<configuration>
-									<additionalProperties>
-										<encoding.source>${project.build.sourceEncoding}
-										</encoding.source>
-										<encoding.reporting>${project.reporting.outputEncoding}
-										</encoding.reporting>
-										<java.source>${java.version}</java.source>
-										<java.target>${java.version}</java.target>
-									</additionalProperties>
-								</configuration>
-							</execution>
-						</executions>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -135,25 +115,6 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!-- <plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-install-plugin</artifactId>
-						<version>2.3.1</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>install-file</goal>
-								</goals>
-								<phase>install</phase>
-								<configuration>
-									<file>${project.build.directory}/modules/${project.build.finalName}.${project.packaging}</file>
-									<generatePom>false</generatePom>
-									<pomFile>pom.xml</pomFile>
-									<version>${project.build.version}</version>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin> -->
 				</plugins>
 			</build>
 		</profile>
