@@ -16,6 +16,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
+			<version>5.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
 			<!-- https://jira.spring.io/browse/SPR-16776 -->
@@ -31,18 +32,22 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.0.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
@@ -84,30 +89,6 @@
 							<outputDirectory>${project.build.directory}/modules</outputDirectory>
 						</configuration>
 					</plugin>
-					<plugin>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-maven-plugin</artifactId>
-						<configuration>
-							<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>build-info</goal>
-								</goals>
-								<configuration>
-									<additionalProperties>
-										<encoding.source>${project.build.sourceEncoding}
-										</encoding.source>
-										<encoding.reporting>${project.reporting.outputEncoding}
-										</encoding.reporting>
-										<java.source>${java.version}</java.source>
-										<java.target>${java.version}</java.target>
-									</additionalProperties>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
 
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -131,27 +112,18 @@
 							</execution>
 						</executions>
 					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-install-plugin</artifactId>
-						<version>2.3.1</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>install-file</goal>
-								</goals>
-								<phase>install</phase>
-								<configuration>
-									<file>${project.build.directory}/modules/${project.build.finalName}.${project.packaging}</file>
-									<generatePom>false</generatePom>
-									<pomFile>pom.xml</pomFile>
-									<version>${project.build.version}</version>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
 				</plugins>
 			</build>
 		</profile>
 	</profiles>
+	<repositories>
+		<repository>
+			<id>spring-snapshot</id>
+			<name>Spring Snapshot Repository</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
